--- a/.docker/supervisord.conf
+++ b/.docker/supervisord.conf
@@ -11,6 +11,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
+autorestart=true
 startretries=0
 priority=5
 
@@ -20,6 +21,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+autostart=true
 autorestart=true
 startretries=0
 priority=10
