--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -112,7 +112,7 @@ http {
             add_header X-Frame-Options "SAMEORIGIN";
             add_header X-Content-Type-Options "nosniff";
 
-            root /var/www/html/public;
+            root /app/public;
             index index.php index.html;
 
             location / {
