--- a/.docker/custom.ini
+++ b/.docker/custom.ini
@@ -1,6 +1,8 @@
 [PHP]
+upload_max_filesize=20M
+post_max_size=20M
 display_errors=On
-max_execution_time=12000
+max_execution_time=120
 expose_php=Off
 
 [Date]
