--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -107,7 +107,7 @@ http {
             sendfile off;
             tcp_nodelay on;
             absolute_redirect off;
-            client_max_body_size 1m;
+            client_max_body_size 20M;
 
             add_header X-Frame-Options "SAMEORIGIN";
             add_header X-Content-Type-Options "nosniff";
