--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -100,25 +100,34 @@ http {
 
         # Default server definition
         server {
-            listen [::]:80 default_server;
-            listen 80 default_server;
+            listen [::]:8000 default_server;
+            listen 8000 default_server;
             server_name _;
+
+            root /app/public;
+            index index.php index.html;
 
             sendfile off;
             tcp_nodelay on;
             absolute_redirect off;
             client_max_body_size 20M;
 
+            # Client IP Handling
+            real_ip_header X-Forwarded-For;
+            real_ip_recursive on;
+
             add_header X-Frame-Options "SAMEORIGIN";
             add_header X-Content-Type-Options "nosniff";
-
-            root /app/public;
-            index index.php index.html;
+            add_header X-Proxy-Cache $upstream_cache_status;
+            add_header X-XSS-Protection "1; mode=block";
 
             location / {
-                # First attempt to serve request as file, then
-                # as directory, then fall back to index.php
-                try_files $uri $uri/ /index.php?q=$uri&$args;
+                try_files $uri $uri/ /index.php?$query_string;
+
+                # Client IP Handling
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
             }
 
             # Pass the PHP scripts to PHP-FPM listening on php-fpm.sock
@@ -133,7 +142,10 @@ http {
             }
 
             location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
-                expires 5d;
+                expires max;
+                add_header Cache-Control public;
+                add_header Access-Control-Allow-Origin *;
+                access_log off;
             }
 
             # Deny access to . files, for security
