--- a/ARM64/7.4/Dockerfile
+++ b/ARM64/7.4/Dockerfile
@@ -1,11 +1,11 @@
-FROM alpine:3.17
+FROM arm64v8/alpine:3.15
 
 # Set label information
 LABEL Maintainer="Aditya Darma <adhit.boys1@gmail.com>"
 LABEL Description="Lightweight Image for development."
-LABEL OS Version="Alpine Linux 3.17"
-LABEL PHP Version="8.1"
-LABEL Nginx Version="1.22"
+LABEL OS Version="Alpine Linux 3.15"
+LABEL PHP Version="7.4"
+LABEL Nginx Version="1.20"
 
 # Setup document root for application
 WORKDIR /app
@@ -19,50 +19,45 @@ RUN apk add --no-cache \
 # Install package PHP
 RUN apk add --no-cache \
     # Default
-    php81 \
-    php81-bcmath \
-    php81-ctype \
-    php81-curl \
-    php81-dom \
-    php81-fileinfo \
-    php81-fpm \
-    php81-iconv \
-    php81-json \
-    php81-mbstring \
-    php81-opcache \
-    php81-openssl \
-    php81-phar \
-    php81-simplexml \
-    php81-session \
-    php81-tokenizer \
-    php81-xml \
-    php81-xmlreader \
-    php81-xmlwriter \
-    php81-zip \
-    php81-zlib \
+    php7 \
+    php7-bcmath \
+    php7-ctype \
+    php7-curl \
+    php7-dom \
+    php7-fileinfo \
+    php7-fpm \
+    php7-iconv \
+    php7-json \
+    php7-mbstring \
+    php7-opcache \
+    php7-openssl \
+    php7-phar \
+    php7-simplexml \
+    php7-session \
+    php7-tokenizer \
+    php7-xml \
+    php7-xmlreader \
+    php7-xmlwriter \
+    php7-zip \
+    php7-zlib \
     # Database
-    php81-pdo_mysql \
-    php81-pdo_pgsql \
+    php7-mysqli \
+    php7-pdo_mysql \
+    php7-pdo_pgsql \
     # Image
-    php81-gd \
-    php81-pecl-imagick
-
-# Install packages NodeJS
-RUN apk add --no-cache \
-    nodejs \
-    npm
-RUN npm install -g npm
+    php7-gd \
+    php7-pecl-imagick
 
 # Configure PHP-FPM
-COPY .docker/www.conf /etc/php81/php-fpm.d/www.conf
-COPY .docker/custom.ini /etc/php81/conf.d/custom.ini
+COPY ../../custom/www.conf /etc/php7/php-fpm.d/www.conf
+COPY ../../custom/php-custom.ini /etc/php7/conf.d/custom.ini
 
 # Install packages Nginx
 RUN apk add --no-cache \
     nginx
 
 # Configure nginx
-COPY .docker/nginx.conf /etc/nginx/nginx.conf
+COPY ../../custom/nginx.conf /etc/nginx/nginx.conf
 
 # Expose the port nginx is reachable on
 EXPOSE 8000
@@ -72,7 +67,7 @@ RUN apk add --no-cache \
     supervisor
 
 # Configure supervisord
-COPY .docker/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY ARM64/7.4/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Install composer from the official image
 COPY --from=composer /usr/bin/composer /usr/bin/composer
