--- a/custom/php-custom.ini
+++ b/custom/php-custom.ini
@@ -14,3 +14,6 @@ opcache.enable_cli=1
 opcache.jit_buffer_size=500M
 #opcache.jit=tracing
 opcache.jit=1235
+
+[session]
+session.save_path = "/tmp"
