--- a/ARM64/8.1/Dockerfile
+++ b/ARM64/8.1/Dockerfile
@@ -1,10 +1,10 @@
-FROM alpine:3.16
+FROM arm64v8/alpine:3.17
 
 # Set label information
 LABEL Maintainer="Aditya Darma <adhit.boys1@gmail.com>"
 LABEL Description="Lightweight Image for development."
-LABEL OS Version="Alpine Linux 3.16"
-LABEL PHP Version="8.0"
+LABEL OS Version="Alpine Linux 3.17"
+LABEL PHP Version="8.1"
 LABEL Nginx Version="1.22"
 
 # Setup document root for application
@@ -19,38 +19,38 @@ RUN apk add --no-cache \
 # Install package PHP
 RUN apk add --no-cache \
     # Default
-    php8 \
-    php8-bcmath \
-    php8-ctype \
-    php8-curl \
-    php8-dom \
-    php8-fileinfo \
-    php8-fpm \
-    php8-iconv \
-    php8-json \
-    php8-mbstring \
-    php8-opcache \
-    php8-openssl \
-    php8-phar \
-    php8-simplexml \
-    php8-session \
-    php8-tokenizer \
-    php8-xml \
-    php8-xmlreader \
-    php8-xmlwriter \
-    php8-zip \
-    php8-zlib \
+    php81 \
+    php81-bcmath \
+    php81-ctype \
+    php81-curl \
+    php81-dom \
+    php81-fileinfo \
+    php81-fpm \
+    php81-iconv \
+    php81-json \
+    php81-mbstring \
+    php81-opcache \
+    php81-openssl \
+    php81-phar \
+    php81-simplexml \
+    php81-session \
+    php81-tokenizer \
+    php81-xml \
+    php81-xmlreader \
+    php81-xmlwriter \
+    php81-zip \
+    php81-zlib \
     # Database
-    php8-mysqli \
-    php8-pdo_mysql \
-    php8-pdo_pgsql \
+    php81-mysqli \
+    php81-pdo_mysql \
+    php81-pdo_pgsql \
     # Image
-    php8-gd \
-    php8-pecl-imagick
+    php81-gd \
+    php81-pecl-imagick
 
 # Configure PHP-FPM
-COPY ../../custom/www.conf /etc/php8/php-fpm.d/www.conf
-COPY ../../custom/php-custom.ini /etc/php8/conf.d/custom.ini
+COPY ../../custom/www.conf /etc/php81/php-fpm.d/www.conf
+COPY ../../custom/php-custom.ini /etc/php81/conf.d/custom.ini
 
 # Install packages Nginx
 RUN apk add --no-cache \
@@ -67,7 +67,7 @@ RUN apk add --no-cache \
     supervisor
 
 # Configure supervisord
-COPY x86_64/8.0/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY x86_64/8.1/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Install composer from the official image
 COPY --from=composer /usr/bin/composer /usr/bin/composer
