--- a/supervisor/8.0/supervisord-laravel.conf
+++ b/supervisor/8.0/supervisord-laravel.conf
@@ -5,7 +5,7 @@ logfile_maxbytes=0
 pidfile=/run/supervisord.pid
 
 [program:php-fpm]
-command=php-fpm81 -F
+command=php-fpm8 -F
 autostart=true
 autorestart=true
 startretries=0
@@ -19,15 +19,15 @@ startretries=0
 priority=10
 
 [program:laravel-worker]
-command=php /app/artisan queue:work
+command=php artisan queue:work
 autostart=true
 autorestart=true
 startretries=0
 priority=15
 
-# [program:laravel-schedule]
-# command=/usr/sbin/crond -f -l 8
-# autostart=true
-# autorestart=true
-# startretries=0
-# priority=20
+[program:laravel-schedule]
+command=php artisan schedule:work
+autostart=true
+autorestart=true
+startretries=0
+priority=20
