--- a/supervisor/7.4/supervisord-laravel.conf
+++ b/supervisor/7.4/supervisord-laravel.conf
@@ -19,15 +19,15 @@ startretries=0
 priority=10
 
 [program:laravel-worker]
-command=php /app/artisan queue:work
+command=php artisan queue:work
 autostart=true
 autorestart=true
 startretries=0
 priority=15
 
-# [program:laravel-schedule]
-# command=/usr/sbin/crond -f -l 8
-# autostart=true
-# autorestart=true
-# startretries=0
-# priority=20
+[program:laravel-schedule]
+command=php artisan schedule:work
+autostart=true
+autorestart=true
+startretries=0
+priority=20
