--- a/supervisor/7.4/supervisord-laravel.conf
+++ b/supervisor/7.4/supervisord-laravel.conf
@@ -19,14 +19,14 @@ startretries=0
 priority=10
 
 [program:laravel-worker]
-command=php artisan queue:work
+command=/usr/bin/php /app/artisan queue:work
 autostart=true
 autorestart=true
 startretries=0
 priority=15
 
 [program:laravel-schedule]
-command=php artisan schedule:work
+command=/usr/bin/php /app/artisan schedule:work
 autostart=true
 autorestart=true
 startretries=0
