--- a/custom/www.conf
+++ b/custom/www.conf
@@ -27,7 +27,7 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 50
+pm.max_children = 10
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
@@ -42,19 +42,15 @@ pm.min_spare_servers = 5
 ; Session was closedmum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.max_spare_servers = 35
+pm.max_spare_servers = 10
 
 ; The number of requests each child process should execute before respawning.
 ; This can be useful to work around memory leaks in 3rd party libraries. For
 ; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
 ; Default Value: 0
-pm.max_requests = 0
+pm.max_requests = 500
 
-; Make sure the FPM workers can reach the environment variables for configuration
-clear_env = no
-
-; Catch output from PHP
-catch_workers_output = yes
-
-; Remove the 'child 10 said into stderr' prefix in the log and only show the actual message
-decorate_workers_output = no
+; The number of seconds after which an idle process will be killed.
+; Note: Used only when pm is set to 'ondemand'
+; Default Value: 10s
+; pm.process_idle_timeout = 10s;
