--- a/custom/nginx.conf
+++ b/custom/nginx.conf
@@ -116,6 +116,9 @@ http {
             real_ip_header X-Forwarded-For;
             real_ip_recursive on;
 
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+            add_header Content-Security-Policy "default-src 'self';";
+            add_header Set-Cookie "Path=/; HttpOnly; Secure";
             add_header X-Frame-Options "SAMEORIGIN";
             add_header X-Content-Type-Options "nosniff";
             add_header X-Proxy-Cache $upstream_cache_status;
