--- a/custom/nginx.conf
+++ b/custom/nginx.conf
@@ -112,10 +112,15 @@ http {
             absolute_redirect off;
             client_max_body_size 20M;
 
+            proxy_read_timeout 120;
+            proxy_connect_timeout 120;
+            proxy_send_timeout 120;
+
             # Client IP Handling
             real_ip_header X-Forwarded-For;
             real_ip_recursive on;
 
+            # Header security
             # add_header Content-Security-Policy "default-src 'self';";
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
             add_header X-Frame-Options "SAMEORIGIN";
