--- a/custom/supervisord.conf
+++ b/custom/supervisord.conf
@@ -31,3 +31,9 @@ autostart=true
 autorestart=true
 startretries=0
 priority=20
+
+[if ${ENVIRONMENT} laravel]
+[program:laravel-worker]
+priority=15
+[program:laravel-schedule]
+priority=20
