--- a/custom/supervisord-laravel.conf
+++ b/custom/supervisord-laravel.conf
@@ -18,7 +18,7 @@ autorestart=true
 startretries=0
 priority=10
 
-[program:laravel-worker]
+[program:laravel-queue]
 command=/usr/bin/php /app/artisan queue:work
 autostart=true
 autorestart=true
@@ -30,10 +30,4 @@ command=/usr/bin/php /app/artisan schedule:work
 autostart=true
 autorestart=true
 startretries=0
-priority=20
-
-[if ${ENVIRONMENT} laravel]
-[program:laravel-worker]
-priority=15
-[program:laravel-schedule]
 priority=20
