--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,9 +15,11 @@ jobs:
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build the image
         run: |
-          docker buildx build \
+          docker buildx build --push \
             --platform=linux/arm64/v8,linux/amd64 \
             --build-arg="ALPINE_VERSION=3.15" \
             --build-arg="PHP_VERSION=7.4" \
