--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -16,7 +16,9 @@ jobs:
         with:
           version: latest
       - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: build the image
         run: |
           docker buildx build --push \
