--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           version: latest
       - name: login to docker hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
