--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: build the image
+        uses: docker/build-push-action@v3
         with:
           platforms: linux/amd64,linux/arm64/v8
         run: |
