optimation exexcute time

--- a/custom/www.conf
+++ b/custom/www.conf
@@ -54,3 +54,6 @@ pm.max_requests = 200
 ; Note: Used only when pm is set to 'ondemand'
 ; Default Value: 10s
 pm.process_idle_timeout = 10s;
+
+; Maximum execution time of each script, sinkron dengan Nginx
+request_terminate_timeout = 60s
