--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,11 @@ jobs:
             php_number: "83"
             tag_suffix: "8.3"
 
+          - alpine_version: "3.21"
+            php_version: "8.4"
+            php_number: "84"
+            tag_suffix: "8.4"
+
           # Laravel-specific builds
           - alpine_version: "3.15"
             php_version: "7.4"
@@ -53,6 +58,12 @@ jobs:
             php_version: "8.3"
             php_number: "83"
             tag_suffix: "8.3-laravel"
+            environment: "laravel"
+
+          - alpine_version: "3.21"
+            php_version: "8.4"
+            php_number: "84"
+            tag_suffix: "8.4-laravel"
             environment: "laravel"
 
     steps:
