--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,12 @@
 name: Docker Alpine Linux Lightweight
 
 on:
-  push:
-    branches: [build]
+  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,6 +27,12 @@ jobs:
             php_number: "81"
             tag_suffix: "8.1"
 
+          - alpine_version: "3.19"
+            php_version: "8.1"
+            php_number: "81"
+            variant: "mini"
+            tag_suffix: "mini-8.1"
+
           - alpine_version: "3.20"
             php_version: "8.2"
             php_number: "82"
@@ -36,10 +43,22 @@ jobs:
             php_number: "83"
             tag_suffix: "8.3"
 
+          - alpine_version: "3.20"
+            php_version: "8.3"
+            php_number: "83"
+            variant: "mini"
+            tag_suffix: "mini-8.3"
+
           - alpine_version: "3.21"
             php_version: "8.4"
             php_number: "84"
             tag_suffix: "8.4"
+
+          - alpine_version: "3.21"
+            php_version: "8.4"
+            php_number: "84"
+            variant: "mini"
+            tag_suffix: "mini-8.4"
 
           # Laravel-specific builds
           - alpine_version: "3.15"
@@ -54,16 +73,37 @@ jobs:
             tag_suffix: "8.1-laravel"
             environment: "laravel"
 
+          - alpine_version: "3.19"
+            php_version: "8.1"
+            php_number: "81"
+            variant: "mini"
+            tag_suffix: "mini-8.1-laravel"
+            environment: "laravel"
+
           - alpine_version: "3.20"
             php_version: "8.3"
             php_number: "83"
             tag_suffix: "8.3-laravel"
             environment: "laravel"
 
+          - alpine_version: "3.20"
+            php_version: "8.3"
+            php_number: "83"
+            variant: "mini"
+            tag_suffix: "mini-8.3-laravel"
+            environment: "laravel"
+
           - alpine_version: "3.21"
             php_version: "8.4"
             php_number: "84"
             tag_suffix: "8.4-laravel"
+            environment: "laravel"
+
+          - alpine_version: "3.21"
+            php_version: "8.4"
+            php_number: "84"
+            variant: "mini"
+            tag_suffix: "mini-8.4-laravel"
             environment: "laravel"
 
     steps:
@@ -82,9 +122,13 @@ jobs:
       - name: Build and push Docker image
         run: |
           # Set environment-specific build argument if defined
-          EXTRA_ARGS=""
+          ENVIROMENT_ARGS=""
+          VARIANT_ARGS=""
           if [ "${{ matrix.environment }}" != "" ]; then
-            EXTRA_ARGS="--build-arg ENVIROMENT=${{ matrix.environment }}"
+            ENVIROMENT_ARGS="--build-arg ENVIROMENT=${{ matrix.environment }}"
+          fi
+          if [ "${{ matrix.variant }}" != "" ]; then
+            VARIANT_ARGS="--build-arg VARIANT=${{ matrix.variant }}"
           fi
 
           # Build and push the image
@@ -93,5 +137,6 @@ jobs:
             --build-arg="ALPINE_VERSION=${{ matrix.alpine_version }}" \
             --build-arg="PHP_VERSION=${{ matrix.php_version }}" \
             --build-arg="PHP_NUMBER=${{ matrix.php_number }}" \
-            $EXTRA_ARGS \
+            $ENVIROMENT_ARGS \
+            $VARIANT_ARGS \
             --tag adityadarma/alpine-php-nginx:${{ matrix.tag_suffix }} .
