--- a/custom/php-custom.ini
+++ b/custom/php-custom.ini
@@ -35,9 +35,7 @@ opcache.jit_buffer_size = 256M
 opcache.jit = tracing
 
 [session]
-; Pastikan lokasi penyimpanan session aman
-session.save_path = "/var/lib/php/sessions"
-; Nonaktifkan sesi pada folder /tmp untuk keamanan
+session.save_path = "/var/tmp"
 session.gc_maxlifetime = 7200
 session.cookie_secure = 1
 session.cookie_httponly = 1
