--- a/custom/www.conf
+++ b/custom/www.conf
@@ -55,5 +55,5 @@ pm.max_requests = 500
 ; Default Value: 10s
 pm.process_idle_timeout = 10s;
 
-; Maximum execution time of each script, sinkron dengan Nginx
+; Maximum execution time of each script, sync with Nginx
 request_terminate_timeout = 120s
