--- a/custom/php-custom.ini
+++ b/custom/php-custom.ini
@@ -1,19 +1,19 @@
 [PHP]
 ; Meningkatkan batas unggah file jika diperlukan
-upload_max_filesize = 50M
-post_max_size = 50M
+upload_max_filesize=50M
+post_max_size=50M
 
 ; Nonaktifkan display_errors di production untuk keamanan
-display_errors = Off
+display_errors=Off
 
 ; Mempercepat waktu eksekusi script yang panjang, sesuaikan dengan kebutuhan
-max_execution_time = 120
+max_execution_time=120
 
 ; Sesuaikan memory limit dengan kebutuhan aplikasi
-memory_limit = 512M
+memory_limit=512M
 
 ; Menonaktifkan expose_php untuk mencegah kebocoran informasi versi PHP
-expose_php = Off
+expose_php=Off
 
 
 [Date]
@@ -22,20 +22,21 @@ date.timezone="UTC"
 
 [opcache]
 ; Mengaktifkan opcache untuk meningkatkan performa
-opcache.enable = 1
-opcache.enable_cli = 1
-opcache.memory_consumption = 256
-opcache.interned_strings_buffer = 16
-opcache.max_accelerated_files = 10000
-opcache.validate_timestamps = 1
-opcache.revalidate_freq = 2
-
-; Konfigurasi JIT untuk performa optimal
-opcache.jit_buffer_size = 256M
-opcache.jit = tracing
+opcache.enable=1
+opcache.enable_cli=1
+opcache.memory_consumption=256
+opcache.interned_strings_buffer=16
+opcache.max_accelerated_files=10000
+; 0 untuk production, 1 untuk development
+opcache.validate_timestamps=${VALIDATE_TIMESTAMPS}
+opcache.revalidate_freq=60
+opcache.fast_shutdown=1
+opcache.jit_buffer_size=256M
+opcache.jit=tracing
 
 [session]
-session.save_path = "/var/tmp"
-session.gc_maxlifetime = 7200
-session.cookie_secure = 1
-session.cookie_httponly = 1
+; Pastikan lokasi penyimpanan session aman
+session.save_path="/var/tmp"
+session.gc_maxlifetime=7200
+session.cookie_secure=1
+session.cookie_httponly=1
