--- a/custom/php-custom.ini
+++ b/custom/php-custom.ini
@@ -27,9 +27,8 @@ opcache.enable_cli=1
 opcache.memory_consumption=256
 opcache.interned_strings_buffer=16
 opcache.max_accelerated_files=10000
-; 0 untuk production, 1 untuk development
 opcache.validate_timestamps=${VALIDATE_TIMESTAMPS}
-opcache.revalidate_freq=60
+opcache.revalidate_freq=${REVALIDATE_FREQ}
 opcache.fast_shutdown=1
 opcache.jit_buffer_size=256M
 opcache.jit=tracing
