--- a/custom/php-custom.ini
+++ b/custom/php-custom.ini
@@ -1,27 +1,27 @@
 [PHP]
-; Meningkatkan batas unggah file jika diperlukan
+; Increase file upload limit if needed
 upload_max_filesize=50M
 post_max_size=50M
 
-; Nonaktifkan display_errors di production untuk keamanan
+; Disable display_errors in production for security
 display_errors=Off
 
-; Mempercepat waktu eksekusi script yang panjang, sesuaikan dengan kebutuhan
+; Speed ​​up long script execution time, adjust to your needs
 max_execution_time=120
 
-; Sesuaikan memory limit dengan kebutuhan aplikasi
+; Adjust memory limit to application needs
 memory_limit=512M
 
-; Menonaktifkan expose_php untuk mencegah kebocoran informasi versi PHP
+; Disable expose_php to prevent PHP version information leaks.
 expose_php=Off
 
 
 [Date]
-; Gunakan timezone server atau sesuaikan dengan zona waktu aplikasi
-date.timezone="UTC"
+; Use server timezone or adjust to application timezone
+date.timezone=${TIMEZONE}
 
 [opcache]
-; Mengaktifkan opcache untuk meningkatkan performa
+; Enable opcache to improve performance
 opcache.enable=1
 opcache.enable_cli=1
 opcache.memory_consumption=256
@@ -34,7 +34,7 @@ opcache.jit_buffer_size=256M
 opcache.jit=tracing
 
 [session]
-; Pastikan lokasi penyimpanan session aman
+; Make sure the session storage location is secure
 session.save_path="/var/tmp"
 session.gc_maxlifetime=7200
 session.cookie_secure=1
