--- a/custom/php.ini
+++ b/custom/php.ini
@@ -18,7 +18,7 @@ expose_php=Off
 
 [Date]
 ; Use server timezone or adjust to application timezone
-date.timezone=${TIMEZONE}
+date.timezone=${TZ}
 
 [opcache]
 ; Enable opcache to improve performance
