--- a/custom/nginx.conf
+++ b/custom/nginx.conf
@@ -41,7 +41,7 @@ http {
     # indicated by the request header Content-Length. If the stated content
     # length is greater than this size, then the client receives the HTTP
     # error code 413. Set to 0 to disable. Default is '1m'.
-    client_max_body_size 50m;
+    client_max_body_size ${MAX_BODY_SIZE};
 
     # Sendfile copies data between one FD and other from within the kernel,
     # which is more efficient than read() + write(). Default is off.
@@ -84,11 +84,10 @@ http {
     gzip_vary on;
 
     # Set timeout response time to client.
-    send_timeout 120;
-    proxy_read_timeout 120;
-    proxy_connect_timeout 120;
-    proxy_send_timeout 120;
-    
+    send_timeout ${MAX_TIMEOUT};
+    proxy_read_timeout ${MAX_TIMEOUT};
+    proxy_connect_timeout ${MAX_TIMEOUT};
+    proxy_send_timeout ${MAX_TIMEOUT};
 
     # Helper variable for proxying websockets.
     map $http_upgrade $connection_upgrade {
@@ -146,15 +145,16 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
             fastcgi_index index.php;
-            fastcgi_read_timeout 60;
+            fastcgi_read_timeout ${MAX_TIMEOUT};
             include fastcgi_params;
         }
 
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
+        location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|svg|woff|woff2|ttf|eot|otf|webp|mp4|webm|ogg|mp3|wav)$ {
             expires max;
             add_header Cache-Control public;
             add_header Access-Control-Allow-Origin *;
             access_log off;
+            log_not_found off;
         }
 
         # Deny access to . files, for security
