--- a/custom/php.ini
+++ b/custom/php.ini
@@ -1,13 +1,13 @@
 [PHP]
 ; Increase file upload limit if needed
-upload_max_filesize=50M
-post_max_size=50M
+upload_max_filesize=${MAX_BODY_SIZE}
+post_max_size=${MAX_BODY_SIZE}
 
 ; Disable display_errors in production for security
 display_errors=Off
 
 ; Speed ​​up long script execution time, adjust to your needs
-max_execution_time=120
+max_execution_time=${MAX_TIMEOUT}
 
 ; Adjust memory limit to application needs
 memory_limit=512M
