--- a/custom/supervisord.conf
+++ b/custom/supervisord.conf
@@ -31,3 +31,10 @@ autostart=${WITH_SCHEDULE}
 autorestart=true
 startretries=0
 priority=20
+
+[program:vite]
+command=sh -c 'cd /app && npm install && npm run dev -- --host'
+autostart=${WITH_VITE}
+autorestart=true
+startretries=0
+priority=25
