--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
             php_version: "7.4"
             php_number: "7"
             variant: "mini"
-            tag_suffix: "mini-7.4"
+            tag_suffix: "7.4-mini"
 
           - alpine_version: "3.16"
             php_version: "8.0"
@@ -35,7 +35,7 @@ jobs:
             php_version: "8.1"
             php_number: "81"
             variant: "mini"
-            tag_suffix: "mini-8.1"
+            tag_suffix: "8.1-mini"
 
           - alpine_version: "3.22"
             php_version: "8.2"
@@ -51,7 +51,13 @@ jobs:
             php_version: "8.3"
             php_number: "83"
             variant: "mini"
-            tag_suffix: "mini-8.3"
+            tag_suffix: "8.3-mini"
+
+          - alpine_version: "3.22"
+            php_version: "8.3"
+            php_number: "83"
+            variant: "node"
+            tag_suffix: "8.3-node"
 
           - alpine_version: "3.22"
             php_version: "8.4"
@@ -62,7 +68,13 @@ jobs:
             php_version: "8.4"
             php_number: "84"
             variant: "mini"
-            tag_suffix: "mini-8.4"
+            tag_suffix: "8.4-mini"
+
+          - alpine_version: "3.22"
+            php_version: "8.4"
+            php_number: "84"
+            variant: "node"
+            tag_suffix: "8.4-node"
 
     steps:
       - name: Checkout code
