--- a/custom/nginx.conf
+++ b/custom/nginx.conf
@@ -117,6 +117,7 @@ http {
         absolute_redirect off;
 
         # Client IP Handling
+        set_real_ip_from 0.0.0.0/0;
         real_ip_header X-Forwarded-For;
         real_ip_recursive on;
 
