--- a/custom/supervisord.conf
+++ b/custom/supervisord.conf
@@ -33,7 +33,7 @@ startretries=0
 priority=20
 
 [program:vite]
-command=sh -c 'cd /app && npm install && npm run dev -- --host'
+command=sh -c 'cd /app && npm run dev -- --host'
 autostart=${WITH_VITE}
 autorestart=true
 startretries=0
