--- a/custom/nginx.conf
+++ b/custom/nginx.conf
@@ -163,6 +163,13 @@ http {
             log_not_found off;
             deny all;
         }
+
+        # Health check URL
+        location /health {
+            access_log off;
+            return 200 'A-OK!';
+            add_header Content-Type text/plain;
+        }
     }
 
     # Includes virtual hosts configs.
