feat: rotate log nginx

--- a/custom/nginx.conf
+++ b/custom/nginx.conf
@@ -101,8 +101,14 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
+    # Configure daily log rotation with date in filename
+    map $time_iso8601 $logdate {
+        default '';
+        '~^(?<ymd>\d{4}-\d{2}-\d{2})' $ymd;
+    }
+
     # Sets the path, format, and configuration for a buffered log write.
-    access_log /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access-$logdate.log main;
 
     # Default server definition
     server {
