--- a/custom/supervisord.conf
+++ b/custom/supervisord.conf
@@ -38,3 +38,11 @@ autostart=${WITH_VITE}
 autorestart=true
 startretries=0
 priority=25
+
+[program:cron]
+command=/usr/bin/supercronic /etc/crontab-nobody
+autostart=${WITH_CRON}
+autorestart=true
+user=nobody
+startretries=0
+priority=30
