--- a/custom/supervisord.conf
+++ b/custom/supervisord.conf
@@ -31,6 +31,10 @@ autostart=${WITH_SCHEDULE}
 autorestart=true
 startretries=0
 priority=20
+stdout_logfile_maxbytes=5MB
+stdout_logfile_backups=3
+stderr_logfile_maxbytes=5MB
+stderr_logfile_backups=3
 
 [program:vite]
 command=sh -c 'cd /app && npm run dev -- --host'
@@ -46,3 +50,7 @@ autorestart=true
 user=nobody
 startretries=0
 priority=30
+stdout_logfile_maxbytes=5MB
+stdout_logfile_backups=3
+stderr_logfile_maxbytes=5MB
+stderr_logfile_backups=3
